iconsdir = $(datadir)/colord/icons
icons_DATA = 	 			\
	colorhug-attach.svg		\
	dtp94-attach.svg		\
	hcfr-attach.svg			\
	huey-attach.svg			\
	i1-display3-attach.svg		\
	i1-monitor-attach.svg		\
	i1-pro-attach.svg		\
	munki-ambient.svg		\
	munki-attach.svg		\
	munki-calibrate.svg		\
	munki-projector.svg		\
	munki-screen.svg		\
	spyder2-attach.svg		\
	spyder3-attach.svg

EXTRA_DIST =				\
	$(icons_DATA)

-include $(top_srcdir)/git.mk
