iconsdir = $(datadir)/colord/icons
icons_DATA = 	 				\
	colorhug-attach.svg			\
	dtp94-attach.svg			\
	hcfr-attach.svg				\
	huey-attach.svg				\
	i1-display3-attach.svg			\
	i1-monitor-attach.svg			\
	i1-pro-attach.svg			\
	color-munki-smile-attach.svg		\
	color-munki-photo-ambient.svg		\
	color-munki-photo-attach.svg		\
	color-munki-photo-calibrate.svg		\
	color-munki-photo-projector.svg		\
	color-munki-photo-screen.svg		\
	spyder2-attach.svg			\
	spyder3-attach.svg			\
	spyder4-attach.svg

EXTRA_DIST =				\
	$(icons_DATA)

-include $(top_srcdir)/git.mk
